# hll_patreon_bot

./: .pre-commit-config.yaml  Dockerfile  compose.yaml  default.env  documented.json  entrypoint.sh  example.md  pyproject.toml  undocumented.json
hll_patreon_bot/: models.py
hll_patreon_bot/bot/: constants.py  main.py  models.py  utils.py
hll_patreon_bot/bot/cogs/: crcon.py  patreon.py  user.py
hll_patreon_bot/bot/integrations/: crcon.py
hll_patreon_bot/database/: models.py  utils.py
hll_patreon_bot/integrations/crcon/: crcon.py  types.py
hll_patreon_bot/integrations/patreon/: constants.py  parsers.py  patreon.py  types.py
hll_patreon_bot/patreon_webhook/: actions.py  constants.py  discord.py  types.py  utils.py  webhook_listener.py
sample_data/: member-create.json  member-update.json  members-pledge-create-real.json  members-update-real-2.json  members-update-real.json
tests/: test_database.py  test_webhook_parsing.py
