[tool.poetry]
name = "hll-patreon-bot"
version = "0.1.0"
description = ""
authors = ["C. Eric Mathey <emathey@protonmail.com>"]
readme = "README.md"
packages = [{include = "hll_patreon_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
