[tool.poetry]
name = "hll-patreon-bot"
version = "0.1.0"
description = ""
authors = ["C. Eric Mathey <emathey@protonmail.com>"]
readme = "README.md"
packages = [{include = "hll_patreon_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
discord-py = "^2.3.2"
loguru = "^0.7.2"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
