[tool.poetry]
name = "hll-patreon-bot"
version = "0.1.0"
description = ""
authors = ["C. Eric Mathey <emathey@protonmail.com>"]
readme = "README.md"
packages = [{include = "hll_patreon_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
loguru = "^0.7.2"
httpx = "^0.26.0"
pydantic = "^2.5.3"
py-cord = "^2.4.1"
trio = "^0.24.0"    
cachetools = "^5.3.2"
starlette = "^0.36.1"
hypercorn = "^0.16.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
pyright = "^1.1.348"
ipython = "^8.20.0"
pytest-mock-resources = "^2.10.0"
pytest = "^8.0.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["hll_patreon_bot"]